--- a/doc/poster.tex
+++ b/doc/poster.tex
@@ -1,17 +1,27 @@
 \documentclass{beamer}
-\usetheme{posterben}
+% \usetheme{posterben}
 
-\title{Title Title Title}
+\title{Title Title}
 \author{Ben Goldman}
 \date{\today}
 
 \usepackage{natbib}
 \usepackage[scale=1.4]{beamerposter}
-\geometry{papersize={32in,48in}}
+\geometry{papersize={41in,36in}}
 
 
 \begin{document}
 
-\maketitle
+\begin{frame}
+\begin{columns}
+  \begin{column}{0.3\textwidth}
+  \end{column}
+  \begin{column}{0.4\textwidth}
+    \maketitle
+  \end{column}
+  \begin{column}{0.3\textwidth}
+  \end{column}
+\end{columns}
+\end{frame}
 
 \end{document}
