--- a/doc/poster.tex
+++ b/doc/poster.tex
@@ -1,7 +1,8 @@
 \documentclass{beamer}
+\usepackage{graphicx}
 % \usetheme{posterben}
 
-\title{Title Title}
+\title{Modeling Magnetic Field Amplification in Neutron Star Collisions}
 \author{Ben Goldman}
 \date{\today}
 
@@ -9,17 +10,24 @@
 \usepackage[scale=1.4]{beamerposter}
 \geometry{papersize={41in,36in}}
 
+\newcommand{\myfig}[4]{
+  \begin{figure}
+    \centering
+    \includegraphics[width=#3\textwidth]{figures/#1}
+    \caption{#2}
+    \label{fig:#4}
+  \end{figure}
+}
 
 \begin{document}
 
 \begin{frame}
+  \maketitle
 \begin{columns}
-  \begin{column}{0.3\textwidth}
-  \end{column}
   \begin{column}{0.4\textwidth}
-    \maketitle
+    \myfig{}
   \end{column}
-  \begin{column}{0.3\textwidth}
+  \begin{column}{0.6\textwidth}
   \end{column}
 \end{columns}
 \end{frame}
