--- a/doc/poster.tex
+++ b/doc/poster.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 \usepackage{graphicx}
-% \usetheme{posterben}
+% \usetheme{Berlin}
 
 \title{Modeling Magnetic Field Amplification in Neutron Star Collisions}
 \author{Ben Goldman}
@@ -25,9 +25,19 @@
   \maketitle
 \begin{columns}
   \begin{column}{0.4\textwidth}
-    \myfig{}
+    \begin{block}{Neutron star mergers}
+      \myfig{timeline.png}{}{0.8}{timeline}
+      \myfig{merger.png}{}{0.8}{merger}
+    \end{block}
+    \begin{block}{The Kelvin-Helmholtz instability}
+      % https://ichef.bbci.co.uk/news/976/cpsprodpb/3BA9/production/_127937251_screenshot2022-12-08at2.03.52pm.png
+      \myfig{clouds.png}{}{0.8}{clouds}
+    \end{block}
   \end{column}
   \begin{column}{0.6\textwidth}
+    \myfig{cubes.pdf}{}{0.8}{cubes}
+    \myfig{images.pdf}{}{0.8}{images}
+    \myfig{lines.pdf}{}{0.8}{lines}
   \end{column}
 \end{columns}
 \end{frame}
